--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,136 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container-div{
+  display:flex;
+  flex-direction: row;
+  color:white;
+}
+
+
+
+.form-div{
+  width:50%;
+  height:100vh;
+  background-color: #745E5E;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.image-div{
+  width:50%;
+}
+
+button{
+  border:none;
+  background-color: white;
+  border-radius: 2px;
+  padding: 10px 35px;
+  font-size: 18px;
+  margin: 15px 15px;
+}
+
+button:hover{
+  opacity:0.7;
+  cursor: pointer;
+}
+
+.radio-container{
+  display: flex;
+  flex-direction: row;
+  margin-top:40px;
+}
+
+.step{
+  display: flex;
+  flex-direction: column;
+}
+
+input{
+  background-color: #745E5E;
+  border:none;
+  border-bottom: 2px solid white;
+  color:white;
+  font-size:18px;
+}
+input:focus-visible{
+  outline: none;
+}
+
+input::placeholder{
+  color:white;
+  text-align: center;
+  font-size:14px;
+}
+
+input[type='radio']{
+  opacity:0;
+  position:absolute;
+  top:-10px;
+  left:0px;
+  z-index:500;
+  height: 45px;
+  width:70px;
+}
+
+.step-radio{
+  position: relative;
+  margin: 0px 15px;
+}
+
+.step-radio>label{
+  color: white;
+  background-color: #745E5E;
+  border: white 1px solid;
+}
+
+label{
+  padding: 10px 20px;
+  border-radius:5px;
+  font-size:24px;
+}
+
+
+
+.step-large{
+  margin-bottom:30px;
+}
+
+h3{
+  text-align: center;
+  margin-bottom:30px;
+}
+
+
+
+@media only screen and (max-width:680px){
+  .container-div{
+    display:flex;
+    flex-direction: column;
+    color:white;
+  }
+  .form-div{
+    width:100%;
+    height:50vh;
+    background-color: #745E5E;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+ .image-div{
+  width:100vw;
+  height:50vh;
+  background-size: cover;
+ }
+
+  img{
+    width:100%;
+    height:100%;
+  }
+
+}
